Bug 108111 - Calc: checkboxes are not visible
Summary: Calc: checkboxes are not visible
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Calc (show other bugs)
Version:
(earliest affected)
unspecified
Hardware: All Linux (All)
: medium normal
Assignee: Caolán McNamara
URL:
Whiteboard: target:5.3.4
Keywords:
Depends on:
Blocks:
 
Reported: 2017-05-26 10:08 UTC by Justin L
Modified: 2017-05-30 15:58 UTC (History)
4 users (show)

See Also:
Crash report or crash signature:


Attachments
checkBoxes_mso2003.png: especially notice the cluster of 7 checkboxes near the bottom (29.25 KB, image/png)
2017-05-26 10:08 UTC, Justin L
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Justin L 2017-05-26 10:08:55 UTC
Created attachment 133611 [details]
checkBoxes_mso2003.png: especially notice the cluster of 7 checkboxes near the bottom

Somewhere in 5.2 or 5.3 development, the checkboxes no longer appear when loading attachment 133505 [details].  (No need to enable macros for this bug.) Tested with Ubuntu with SAL_USE_VCLPLUGIN=gtk and gen.

Resolved in 5.4 on Jan 4 somewhere between fixed e83917a74e501052d885aae7e51e0c60e1e0ffd5 and broken d3c1a84d4c0bc24defcc497587fa6f258aa8ebdd

This might be something worth back-porting?  Did it affect Windows also?
Comment 1 Buovjaga 2017-05-26 10:19:06 UTC
Works on Windows

Version: 5.3.3.2 (x64)
Build ID: 3d9a8b4b4e538a85e0782bd6c2d430bafe583448
CPU Threads: 4; OS Version: Windows 6.19; UI Render: default; Layout Engine: new; 
Locale: fi-FI (fi_FI); Calc: group
Comment 2 Justin L 2017-05-26 10:33:19 UTC
CC: Caolán - this is in your area and several commits are possibilities...
Comment 3 Shinji Enoki 2017-05-28 08:27:28 UTC
I can't reproduce it in the following environment.

OS: Debian jessie x86-64
Version: 5.5.0.0.alpha0+
Build ID: 9ad56da72a79a2d649755a0ab98bd53f238db08b
CPU threads: 4; OS: Linux 3.16; UI render: default; VCL: gtk2; 
TinderBox: Linux-rpm_deb-x86_64@70-TDF, Branch:master, Time: 2017-05-27_23:12:59
Locale: en-US (ja_JP.utf8); Calc: group


I was able to reproduce that the check box can not be seen in the following environment.

OS: Debian jessie x86-64
Version: 5.3.3.2
Build ID: 3d9a8b4b4e538a85e0782bd6c2d430bafe583448
CPU Threads: 4; OS Version: Linux 3.16; UI Render: default; VCL: gtk2; Layout Engine: new; 
Locale: en-US (ja_JP.utf8); Calc: group
Comment 4 Caolán McNamara 2017-05-30 14:26:28 UTC
I think that basically this is a duplicate of bug 105463 but that didn't get 100% fixed I think, so I'll use this to fix the remainder
Comment 5 Caolán McNamara 2017-05-30 14:29:00 UTC
seeing as this is ok in 5.4 and master I'll set it as fixed. 5-3 backport which works for me is at https://gerrit.libreoffice.org/#/c/38223/
Comment 6 Commit Notification 2017-05-30 15:58:34 UTC
Caolán McNamara committed a patch related to this issue.
It has been pushed to "libreoffice-5-3":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=ec49295718144aeeb81683bcfe5923c3610e8d21&h=libreoffice-5-3

Resolves: tdf#108111 backport mono checkboxes fix

It will be available in 5.3.4.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.