Resolves: tdf#108111 backport mono checkboxes fix

replace the blue which will be set to transparent, with transparent

and then we don't "manually" replace a color with transparent which
makes tdf#108111 look right again

(cherry picked from commit f1a8e00764b32c3b799ecd40dcb4dd632493bc45)

Change-Id: I95923685d412145e88b672a50311c767d1425493